example/secondfile/objects/Apttus_QPConfig__ProposalProductAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>Access_Speed_AVPN__c</fullName>
        <label>Access Speed AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3.088 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.632 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6.176 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.720 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9.264 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.808 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12.352 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Speed_MIS__c</fullName>
        <label>Access Speed MIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type_AVPN__c</fullName>
        <label>Access Type AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_DNS__c</fullName>
        <label>Additional DNS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrent_Calls__c</fullName>
        <label>Concurrent Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox is selected in the UI if the client wants flexible speed</description>
        <label>Hi-Cap Flex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Flexible_Reach_Plan__c</fullName>
        <label>IP Flexible Reach Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan A</fullName>
                </value>
                <value>
                    <fullName>Plan B</fullName>
                </value>
                <value>
                    <fullName>Plan C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Option_AVPN__c</fullName>
        <label>Install Option AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Option_MIS__c</fullName>
        <label>Install Option MIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tele Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Router__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port_Speed_AVPN__c</fullName>
        <label>Port Speed AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3.088 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.632 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6.176 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.720 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9.264 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.808 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12.352 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed_MIS__c</fullName>
        <label>Port Speed MIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Ethernet</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Type_AVPN__c</fullName>
        <label>Port Type AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Type_MIS__c</fullName>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBB_Speed_AVPN__c</fullName>
        <description>Minimum Bandwidth Commitment for AVPN</description>
        <inlineHelpText>Minimum Bandwidth Commitment for AVPN</inlineHelpText>
        <label>UBB Speed AVPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBB_Speed_MIS__c</fullName>
        <description>Minimum Bandwidth Commitment for MIS</description>
        <inlineHelpText>Minimum Bandwidth Commitment for MIS</inlineHelpText>
        <label>UBB Speed MIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VASA_Region__c</fullName>
        <label>VASA Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Region</fullName>
                </value>
                <value>
                    <fullName>Out of Region 1</fullName>
                </value>
                <value>
                    <fullName>Out of Region 1A</fullName>
                </value>
                <value>
                    <fullName>Out of Region 2</fullName>
                </value>
                <value>
                    <fullName>OO1</fullName>
                </value>
                <value>
                    <fullName>OO1A</fullName>
                </value>
                <value>
                    <fullName>OO2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>